@startuml
'https://plantuml.com/class-diagram

abstract class Media {
#titre : string
#dureeEmprunt : string
{abstract} +getInfos()
}

class Livre {
-isbn : int
-auteur : string
-nombrePages : int
+getInfos()
}

class BluRay {
-realisateur : string
-dureeHeures : int
-dureeMinutes : int
-anneeSortie : string
+getInfos()
}

class Magazine {
-numero : int
-datePublication : DateTime
+getInfos()
}

class Adherent {
-numeroAdherent : string
-prenom : string
-nom : string
-email : string
-dateAdhesion : DateTime
+genererNumero()
+renouvelerAdhesion()
+getInfosAdherent()
+checkValiditeAdhesion()
}

class Emprunt {
-dateEmprunt : DateTime
-dateRetourEstimee : DateTime
-dateRetour : ?DateTime
+getInfosEmprunt()
+checkIfEmprunte()
+checkAlertEmprunt()
+checkDepassementDate()
}

class Bibliotheque {
-nom : string
+inscrireAdherent()
+ajouterMedia()
+emprunterMedia()
}

Media <|-- Livre
Media <|-- Magazine
Media <|-- BluRay
Adherent "1..1  " --> "0..* " Emprunt : " effectue"
Emprunt "0..1  " <-- "1..1  " Media : " est choisi dans"
Bibliotheque "1..1 " --> "0..*" Media : " est stocké dans"
Bibliotheque "1..1 " --> "  0..*" Emprunt : " est répertorié dans"
Adherent "0..*" <-- "1..1   " Bibliotheque : "s'inscrit dans"
@enduml